syntax = "proto3";
import "google/protobuf/empty.proto"; 
package timers;
option go_package = "tsuwari/grpc/timers";

service Timers {
  rpc AddTimerToQueue(Request) returns (google.protobuf.Empty) {} 
  rpc RemoveTimerFromQueue(Request) returns (google.protobuf.Empty) {} 
}

message Request {
  string timerId = 1;
}
